[gd_scene load_steps=50 format=3 uid="uid://jlav0m1ndqde"]

[ext_resource type="Script" uid="uid://br2ou0xf5p2mo" path="res://src/game.gd" id="1_77rk7"]
[ext_resource type="PackedScene" uid="uid://bbow7knip3g6g" path="res://src/player/player.tscn" id="1_hu241"]
[ext_resource type="Script" uid="uid://d27rd5rlvycvc" path="res://src/player/state_machine/player_state_machine.gd" id="3_fg5sk"]
[ext_resource type="Script" uid="uid://kgcxuhne3rbl" path="res://src/player/state_machine/state_dead.gd" id="6_bheuf"]
[ext_resource type="Script" uid="uid://btdlvy02iwmn2" path="res://src/player/state_machine/state_living.gd" id="7_unc66"]
[ext_resource type="Script" uid="uid://dk6tfo4i3solm" path="res://src/map/world_grid.gd" id="7_vaj68"]
[ext_resource type="Script" uid="uid://bfwa3mijk47us" path="res://src/player/state_machine/state_dying.gd" id="8_isvo6"]
[ext_resource type="PackedScene" uid="uid://yihpxsaeuqdi" path="res://src/entity/ghost/ghost.tscn" id="9_t4a6d"]
[ext_resource type="PackedScene" uid="uid://te0dpapcosk4" path="res://src/map/rooms/room_minimap/basic_room_minimap.tscn" id="9_vaj68"]
[ext_resource type="Script" uid="uid://dqhrw6rxew3fa" path="res://src/common/door_location.gd" id="9_xa8c5"]
[ext_resource type="Script" uid="uid://bv4f3snq7u1u2" path="res://src/common/room_information.gd" id="10_5b14r"]
[ext_resource type="PackedScene" uid="uid://b3nn5u3a5o85j" path="res://src/map/room_components/floor/16x16_floor.tscn" id="10_44xgk"]
[ext_resource type="Script" uid="uid://bo0tyfrjfebc6" path="res://src/map/room_components/room.gd" id="10_uwref"]
[ext_resource type="PackedScene" uid="uid://web8bdry114l" path="res://src/map/room_components/shrine/shrine.tscn" id="11_6msjq"]
[ext_resource type="PackedScene" uid="uid://bson3umirpot2" path="res://src/map/room_components/wall/wall.tscn" id="12_5tnol"]
[ext_resource type="PackedScene" uid="uid://bwfkis8dga70e" path="res://src/entity/items/key_item/key_item_world.tscn" id="12_tee81"]
[ext_resource type="PackedScene" uid="uid://c176v8gdlci8v" path="res://src/old_man/old_man.tscn" id="15_3quv5"]
[ext_resource type="PackedScene" uid="uid://8tfld0cdj22d" path="res://src/entity/items/crucifix/crucifix_world.tscn" id="15_h8yld"]
[ext_resource type="PackedScene" uid="uid://3gsxuhfeo5qs" path="res://src/entity/objects/wall_painting/wall_painting.tscn" id="15_ythyp"]
[ext_resource type="PackedScene" uid="uid://b6pd0nir4sadl" path="res://src/map/room_components/door/door_x16.tscn" id="19_vaj68"]
[ext_resource type="PackedScene" uid="uid://cko3wlfgl81ce" path="res://src/entity/objects/crate/crate.tscn" id="21_d31jr"]
[ext_resource type="PackedScene" uid="uid://d3uaapt6yn0ed" path="res://src/entity/items/tea/tea_world.tscn" id="21_lgjc2"]
[ext_resource type="PackedScene" uid="uid://80yawtiqgmqy" path="res://src/entity/items/rosary/rosary_world.tscn" id="22_p8kkm"]
[ext_resource type="PackedScene" uid="uid://dxrbbho8wlerh" path="res://src/entity/items/lamp_oil/lamp_oil_world.tscn" id="23_3haxr"]
[ext_resource type="PackedScene" uid="uid://b58p4qke66th5" path="res://src/entity/ghost/boss/ghost_boss.tscn" id="23_36jdj"]
[ext_resource type="PackedScene" uid="uid://cp7202hwhpcd5" path="res://src/ui/ui.tscn" id="23_qhcbd"]
[ext_resource type="PackedScene" uid="uid://bsy7ilicbox53" path="res://src/entity/items/holy_water/holy_water_world.tscn" id="24_f1jbl"]
[ext_resource type="PackedScene" uid="uid://k5kxbl8tsn6d" path="res://src/entity/items/carrot/carrot_world.tscn" id="27_xa8c5"]
[ext_resource type="PackedScene" uid="uid://c3wmqi8pl2yas" path="res://src/entity/objects/wall_sconce/wall_sconce_forward.tscn" id="28_rbnx6"]
[ext_resource type="PackedScene" uid="uid://duyse8sywgror" path="res://src/entity/objects/table/table.tscn" id="29_au4ic"]
[ext_resource type="PackedScene" uid="uid://bjw1p41vnaeve" path="res://src/entity/objects/table/table_and_chairs.tscn" id="30_2m2ji"]
[ext_resource type="PackedScene" uid="uid://dwfaytjbaixjo" path="res://src/entity/objects/candle_holder/candle_holder.tscn" id="30_noxbr"]
[ext_resource type="PackedScene" uid="uid://bhpg6bla1mtvu" path="res://src/entity/objects/potted_plant/potted_plant.tscn" id="31_xm868"]
[ext_resource type="PackedScene" uid="uid://bmyu4uefeccim" path="res://src/entity/objects/cardboard_box/cardboard_box_open.tscn" id="32_3onxw"]
[ext_resource type="PackedScene" uid="uid://qcl430tspnu1" path="res://src/entity/objects/cardboard_box/cardboard_box_closed.tscn" id="33_ou5k8"]
[ext_resource type="PackedScene" uid="uid://dtv7i6ecsmj0f" path="res://src/entity/objects/cardboard_box/cardboard_boxes_stacked.tscn" id="34_4lake"]

[sub_resource type="Resource" id="Resource_3y6bj"]
script = ExtResource("9_xa8c5")
location = Vector2(0, 0)
direction = 0

[sub_resource type="Resource" id="Resource_b0qj2"]
script = ExtResource("9_xa8c5")
location = Vector2(0, 0)
direction = 1

[sub_resource type="Resource" id="Resource_8lq6k"]
script = ExtResource("9_xa8c5")
location = Vector2(0, 0)
direction = 2

[sub_resource type="Resource" id="Resource_8lnup"]
script = ExtResource("9_xa8c5")
location = Vector2(0, 0)
direction = 3

[sub_resource type="Resource" id="Resource_eiksi"]
script = ExtResource("10_5b14r")
room_shape = Array[Vector2]([Vector2(0, 0)])
possible_door_locations = Array[ExtResource("9_xa8c5")]([SubResource("Resource_3y6bj"), SubResource("Resource_b0qj2"), SubResource("Resource_8lq6k"), SubResource("Resource_8lnup")])
minimap_component = ExtResource("9_vaj68")

[sub_resource type="Resource" id="Resource_p8kkm"]
script = ExtResource("9_xa8c5")
location = Vector2(0, 0)
direction = 0
metadata/_custom_type_script = "uid://dqhrw6rxew3fa"

[sub_resource type="Resource" id="Resource_rbnx6"]
script = ExtResource("9_xa8c5")
location = Vector2(0, 0)
direction = 0
metadata/_custom_type_script = "uid://dqhrw6rxew3fa"

[sub_resource type="Resource" id="Resource_au4ic"]
script = ExtResource("9_xa8c5")
location = Vector2(0, 0)
direction = 1
metadata/_custom_type_script = "uid://dqhrw6rxew3fa"

[sub_resource type="Resource" id="Resource_2m2ji"]
script = ExtResource("9_xa8c5")
location = Vector2(0, 0)
direction = 2
metadata/_custom_type_script = "uid://dqhrw6rxew3fa"

[sub_resource type="Resource" id="Resource_xm868"]
script = ExtResource("9_xa8c5")
location = Vector2(0, 0)
direction = 3
metadata/_custom_type_script = "uid://dqhrw6rxew3fa"

[sub_resource type="Resource" id="Resource_3onxw"]
script = ExtResource("9_xa8c5")
location = Vector2(0, 0)
direction = 1
metadata/_custom_type_script = "uid://dqhrw6rxew3fa"

[sub_resource type="Resource" id="Resource_ou5k8"]
script = ExtResource("9_xa8c5")
location = Vector2(0, 0)
direction = 3
metadata/_custom_type_script = "uid://dqhrw6rxew3fa"

[sub_resource type="Resource" id="Resource_4lake"]
script = ExtResource("9_xa8c5")
location = Vector2(0, 0)
direction = 2
metadata/_custom_type_script = "uid://dqhrw6rxew3fa"

[node name="Game" type="Node3D" node_paths=PackedStringArray("old_man")]
script = ExtResource("1_77rk7")
old_man = NodePath("WorldGrid/RoomBottom/OldMan")

[node name="Player" parent="." instance=ExtResource("1_hu241")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -3)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.830566, 0.486173, -0.271654, -0.492404, -0.413176, 0.766044, 0.260189, 0.770014, 0.582563, 0, 10, 0)
visible = false
light_color = Color(0.294118, 0.294118, 0.356863, 1)

[node name="DebugLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.830566, 0.486173, -0.271654, -0.492404, -0.413176, 0.766044, 0.260189, 0.770014, 0.582563, 0, 10, 0)
visible = false
light_color = Color(0.29219, 0.29219, 0.29219, 1)

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_fg5sk")

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("6_bheuf")

[node name="Living" type="Node" parent="StateMachine"]
script = ExtResource("7_unc66")

[node name="Dying" type="Node" parent="StateMachine"]
script = ExtResource("8_isvo6")

[node name="WorldGrid" type="Node3D" parent="."]
script = ExtResource("7_vaj68")

[node name="RoomBottom" type="Node3D" parent="WorldGrid" groups=["rooms"]]
script = ExtResource("10_uwref")
spawn_room = true
room_information = SubResource("Resource_eiksi")

[node name="Floor" parent="WorldGrid/RoomBottom" instance=ExtResource("10_44xgk")]

[node name="WallWithoutDoor" parent="WorldGrid/RoomBottom" instance=ExtResource("12_5tnol")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8.05)
monitor_for_transparency = true

[node name="WallWithoutDoor2" parent="WorldGrid/RoomBottom" instance=ExtResource("12_5tnol")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -8.05, 0, 0)

[node name="WallWithoutDoor3" parent="WorldGrid/RoomBottom" instance=ExtResource("12_5tnol")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 8.05, 0, 0)

[node name="Shrine" parent="WorldGrid/RoomBottom" instance=ExtResource("11_6msjq")]
default = true

[node name="KeyItemWorld" parent="WorldGrid/RoomBottom" instance=ExtResource("12_tee81")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 1, 0)

[node name="TeaWorld" parent="WorldGrid/RoomBottom" instance=ExtResource("21_lgjc2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.5913, 0.587763, -6.3731)

[node name="OldMan" parent="WorldGrid/RoomBottom" instance=ExtResource("15_3quv5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1, -5)

[node name="WallPainting" parent="WorldGrid/RoomBottom" instance=ExtResource("15_ythyp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.25348, 2, -7.85561)

[node name="WallPainting2" parent="WorldGrid/RoomBottom" instance=ExtResource("15_ythyp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.26277, 2, -7.85561)

[node name="lamp_oil" parent="WorldGrid/RoomBottom" instance=ExtResource("23_3haxr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.02412, 0.516284, -2.48849)

[node name="holy_water" parent="WorldGrid/RoomBottom" instance=ExtResource("24_f1jbl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.05321, 1.25974, -5.80922)

[node name="holy_water2" parent="WorldGrid/RoomBottom" instance=ExtResource("24_f1jbl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.03833, 1.25974, -5.00578)

[node name="RosaryWorld" parent="WorldGrid/RoomBottom" instance=ExtResource("22_p8kkm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.4075, 0.793856, 1.78992)

[node name="CrucifixWorld" parent="WorldGrid/RoomBottom" instance=ExtResource("15_h8yld")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -4)

[node name="Door" parent="WorldGrid/RoomBottom" instance=ExtResource("19_vaj68")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7.95)
door_location = SubResource("Resource_p8kkm")

[node name="WallWithDoorway" parent="WorldGrid/RoomBottom/Door" index="5"]
monitor_for_transparency = true

[node name="RoomCenter" type="Node3D" parent="WorldGrid" groups=["rooms"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -16)
script = ExtResource("10_uwref")
room_information = SubResource("Resource_eiksi")

[node name="Floor" parent="WorldGrid/RoomCenter" instance=ExtResource("10_44xgk")]

[node name="GhostCenter" parent="WorldGrid/RoomCenter" instance=ExtResource("9_t4a6d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Crate" parent="WorldGrid/RoomCenter" instance=ExtResource("21_d31jr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -5)

[node name="GhostBoss" parent="WorldGrid/RoomCenter" instance=ExtResource("23_36jdj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="CarrotWorld" parent="WorldGrid/RoomCenter" instance=ExtResource("27_xa8c5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.12629, 1.25974, 2.12721)

[node name="Door" parent="WorldGrid/RoomCenter" instance=ExtResource("19_vaj68")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7.95)
door_location = SubResource("Resource_rbnx6")

[node name="WallWithDoorway" parent="WorldGrid/RoomCenter/Door" index="5"]
monitor_for_transparency = true

[node name="Door2" parent="WorldGrid/RoomCenter" instance=ExtResource("19_vaj68")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 7.95, 0, 0)
door_location = SubResource("Resource_au4ic")

[node name="Door3" parent="WorldGrid/RoomCenter" instance=ExtResource("19_vaj68")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 7.95)
door_location = SubResource("Resource_2m2ji")

[node name="WallWithDoorway" parent="WorldGrid/RoomCenter/Door3" index="5"]
monitor_for_transparency = true

[node name="Door4" parent="WorldGrid/RoomCenter" instance=ExtResource("19_vaj68")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7.95, 0, 0)
door_location = SubResource("Resource_xm868")

[node name="WallSconceForward" parent="WorldGrid/RoomCenter" instance=ExtResource("28_rbnx6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.33971, 2.88915, -7.80321)

[node name="RoomLeft" type="Node3D" parent="WorldGrid" groups=["rooms"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16, 0, -16)
script = ExtResource("10_uwref")
room_information = SubResource("Resource_eiksi")

[node name="Floor" parent="WorldGrid/RoomLeft" instance=ExtResource("10_44xgk")]

[node name="WallWithoutDoor" parent="WorldGrid/RoomLeft" instance=ExtResource("12_5tnol")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8.05)

[node name="WallWithoutDoor2" parent="WorldGrid/RoomLeft" instance=ExtResource("12_5tnol")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8.05)
monitor_for_transparency = true

[node name="WallWithoutDoor3" parent="WorldGrid/RoomLeft" instance=ExtResource("12_5tnol")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -8.05, 0, 0)

[node name="GhostLeft1" parent="WorldGrid/RoomLeft" instance=ExtResource("9_t4a6d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="GhostLeft2" parent="WorldGrid/RoomLeft" instance=ExtResource("9_t4a6d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -3)

[node name="GhostLeft3" parent="WorldGrid/RoomLeft" instance=ExtResource("9_t4a6d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 1, 0)

[node name="Crate" parent="WorldGrid/RoomLeft" instance=ExtResource("21_d31jr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Crate2" parent="WorldGrid/RoomLeft" instance=ExtResource("21_d31jr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, -1)

[node name="Crate3" parent="WorldGrid/RoomLeft" instance=ExtResource("21_d31jr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 1, 1)

[node name="Crate4" parent="WorldGrid/RoomLeft" instance=ExtResource("21_d31jr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, -3)

[node name="Crate5" parent="WorldGrid/RoomLeft" instance=ExtResource("21_d31jr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1, -2)

[node name="Crate6" parent="WorldGrid/RoomLeft" instance=ExtResource("21_d31jr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1, 3)

[node name="Crate7" parent="WorldGrid/RoomLeft" instance=ExtResource("21_d31jr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 2)

[node name="Crate8" parent="WorldGrid/RoomLeft" instance=ExtResource("21_d31jr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1, 4)

[node name="Crate9" parent="WorldGrid/RoomLeft" instance=ExtResource("21_d31jr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 4)

[node name="Door" parent="WorldGrid/RoomLeft" instance=ExtResource("19_vaj68")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 7.95, 0, 0)
door_location = SubResource("Resource_3onxw")

[node name="RoomRight" type="Node3D" parent="WorldGrid" groups=["rooms"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, -16)
script = ExtResource("10_uwref")
room_information = SubResource("Resource_eiksi")

[node name="Floor" parent="WorldGrid/RoomRight" instance=ExtResource("10_44xgk")]

[node name="WallWithoutDoor" parent="WorldGrid/RoomRight" instance=ExtResource("12_5tnol")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8.05)

[node name="WallWithoutDoor2" parent="WorldGrid/RoomRight" instance=ExtResource("12_5tnol")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8.05)
monitor_for_transparency = true

[node name="WallWithoutDoor3" parent="WorldGrid/RoomRight" instance=ExtResource("12_5tnol")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 8.05, 0, 0)

[node name="GhostRight1" parent="WorldGrid/RoomRight" instance=ExtResource("9_t4a6d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 1, 0)

[node name="GhostRight2" parent="WorldGrid/RoomRight" instance=ExtResource("9_t4a6d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1, 2)

[node name="GhostRight3" parent="WorldGrid/RoomRight" instance=ExtResource("9_t4a6d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, -4)

[node name="WallPainting" parent="WorldGrid/RoomRight" instance=ExtResource("15_ythyp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -7.96666)

[node name="WallPainting2" parent="WorldGrid/RoomRight" instance=ExtResource("15_ythyp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 2, -7.96666)

[node name="WallPainting3" parent="WorldGrid/RoomRight" instance=ExtResource("15_ythyp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 2, -7.96666)

[node name="Door" parent="WorldGrid/RoomRight" instance=ExtResource("19_vaj68")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7.95, 0, 0)
door_location = SubResource("Resource_ou5k8")

[node name="CandleHolder" parent="WorldGrid/RoomRight" instance=ExtResource("30_noxbr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.85209, 1.93026, 3.30512)

[node name="Table" parent="WorldGrid/RoomRight" instance=ExtResource("29_au4ic")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.85209, 1.16417, 3.2497)

[node name="TableAndChairs" parent="WorldGrid/RoomRight" instance=ExtResource("30_2m2ji")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.223839, 1.23406, 2.36917)

[node name="PottedPlant" parent="WorldGrid/RoomRight" instance=ExtResource("31_xm868")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.83413, 1.29303, -4.98065)

[node name="CardboardBoxOpen" parent="WorldGrid/RoomRight" instance=ExtResource("32_3onxw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.776241, 0)

[node name="CardboardBoxClosed" parent="WorldGrid/RoomRight" instance=ExtResource("33_ou5k8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.844982, -2.31989)

[node name="CardboardBoxesStacked" parent="WorldGrid/RoomRight" instance=ExtResource("34_4lake")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.65042, 1.27098, -5.40839)

[node name="RoomTop" type="Node3D" parent="WorldGrid" groups=["rooms"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -32)
script = ExtResource("10_uwref")
room_information = SubResource("Resource_eiksi")

[node name="Floor" parent="WorldGrid/RoomTop" instance=ExtResource("10_44xgk")]

[node name="WallWithoutDoor" parent="WorldGrid/RoomTop" instance=ExtResource("12_5tnol")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8.05)

[node name="WallWithoutDoor2" parent="WorldGrid/RoomTop" instance=ExtResource("12_5tnol")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -8.05, 0, 0)

[node name="WallWithoutDoor3" parent="WorldGrid/RoomTop" instance=ExtResource("12_5tnol")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 8.05, 0, 0)

[node name="Shrine" parent="WorldGrid/RoomTop" instance=ExtResource("11_6msjq")]

[node name="Door" parent="WorldGrid/RoomTop" instance=ExtResource("19_vaj68")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 7.95)
door_location = SubResource("Resource_4lake")

[node name="WallWithDoorway" parent="WorldGrid/RoomTop/Door" index="5"]
monitor_for_transparency = true

[node name="MinimapObjects" type="Node3D" parent="."]

[node name="UI" parent="." instance=ExtResource("23_qhcbd")]

[node name="GameMenu" parent="UI" index="3"]
show_how_to_play_on_start = false

[editable path="WorldGrid/RoomBottom/Door"]
[editable path="WorldGrid/RoomCenter/Door"]
[editable path="WorldGrid/RoomCenter/Door3"]
[editable path="WorldGrid/RoomTop/Door"]
[editable path="UI"]
